kubernetes/jsdyb-k8s-001/apps/network/external-services/minio.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: network
subsets:
  - addresses:
    - ip: ${SYNOLOGY_ADDR}
    ports:
    - name: http
      port: 9090
    - name: minio
      port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: network
spec:
 ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
    appProtocol: https
  - name: minio
    port: 9000
    protocol: TCP
    targetPort: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
  name: minio
  namespace: network
spec:
  hostnames:
  - minio.${EXTERNAL_DOMAIN}
  parentRefs:
  - kind: Gateway
    name: private-gateway
    namespace: network
  rules:
  - backendRefs:
    - kind: Service
      name: minio
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     hajimari.io/enable: "true"
#     hajimari.io/icon: "simple-icons:minio"
#   labels:
#     app.kubernetes.io/instance: minio
#     app.kubernetes.io/name: minio
#   name: minio
#   namespace: network
# spec:
#   ingressClassName: nginx-internal
#   rules:
#   - host: minio.${INTERNAL_DOMAIN}
#     http:
#       paths:
#       - backend:
#           service:
#             name: minio
#             port:
#               number: 9090
#         path: /
#         pathType: Prefix
#   tls:
#   - hosts:
#     - minio.${INTERNAL_DOMAIN}
#     secretName: minio-tls-internal
